--- a/static/src/components/Home/Home.scss
+++ b/static/src/components/Home/Home.scss
@@ -1,16 +1,83 @@
+imprt 
+
+img {
+  width: 100%;
+}
+
 .text-center {
   text-align: center;
-  width: 80%;
   align-content: center;
 }
 
-h1{
+.center{
   font-size: 2.4rem;
+  text-align: center;
 }
 
-@media(max-width:480px){
-  h1{
+.image_div {
+  width: 50%;
+  align-content: left;
+  max-width: 400px;
+  float: left;
+}
+.image_div2 {
+  width: 50%;
+  align-content: left;
+  max-width: 400px;
+  float: right;
+}
+
+.descript-text{
+  text-align: center;
+}
+
+.support-text{
+  text-align: center;
+}
+
+.btn-primary {
+  margin-right: 10px;
+}
+
+.center-image{
+  text-align: center;
+}
+
+.card {
+  border: unset;
+  background-image: url('./../Images/log-in-screen.png');
+}
+
+
+
+@media(max-width:1171px){
+  .image_div{
+    float: none;
+    display: inline-block;
+    align-content: center;
+  }
+  .image_div2{
+    float:none;
+    display: inline-block;
+    align-content: center;
+  }
+  .descript-text{
+    text-align: center;
+  }
+}
+
+
+@media(max-width:490px){
+  .center{
     font-size: 1.6rem;
     text-align: center;
+  }
+  .image_div {
+    width: 100%;
+    align-content: center;
+  }
+  .image_div2 {
+    display: none;
+    float: none;
   }
 }
