--- a/static/src/components/Layout/Header.scss
+++ b/static/src/components/Layout/Header.scss
@@ -7,6 +7,10 @@
   text-align:right;
 }
 
+.nav-color {
+  background-color: #D3D3D3;
+}
+
 @media(max-width:575px) {
   .login_li {
     text-align: left;
