--- a/static/src/components/Home/Home.scss
+++ b/static/src/components/Home/Home.scss
@@ -1,4 +1,4 @@
-imprt 
+imprt
 
 img {
   width: 100%;
@@ -45,7 +45,7 @@ img {
 
 .card {
   border: unset;
-  background-image: url('./../Images/log-in-screen.png');
+  // background-image: url('./../Images/log-in-screen.png');
 }
 
 
