--- a/static/src/components/Home/Home.scss
+++ b/static/src/components/Home/Home.scss
@@ -1,5 +1,3 @@
-imprt
-
 img {
   width: 100%;
 }
@@ -45,9 +43,13 @@ img {
 
 .card {
   border: unset;
-  // background-image: url('./../Images/log-in-screen.png');
+  opacity: 1%;
 }
 
+.background-image {
+  background: url('./../Images/login-screen.jpg') no-repeat;
+  background-size: cover;
+}
 
 
 @media(max-width:1171px){
