--- a/static/src/components/Home/Home.scss
+++ b/static/src/components/Home/Home.scss
@@ -17,12 +17,14 @@ img {
   align-content: left;
   max-width: 400px;
   float: left;
+  margin: 10px;
 }
 .image_div2 {
   width: 50%;
   align-content: left;
   max-width: 400px;
   float: right;
+  margin: 10px;
 }
 
 .descript-text{
@@ -43,7 +45,8 @@ img {
 
 .card {
   border: unset;
-  opacity: 1%;
+  opacity: .9;
+  background-color: black;
 }
 
 .background-image {
@@ -59,9 +62,7 @@ img {
     align-content: center;
   }
   .image_div2{
-    float:none;
-    display: inline-block;
-    align-content: center;
+    display: none;
   }
   .descript-text{
     text-align: center;
@@ -75,11 +76,7 @@ img {
     text-align: center;
   }
   .image_div {
-    width: 100%;
+    width: 80%;
     align-content: center;
-  }
-  .image_div2 {
-    display: none;
-    float: none;
   }
 }
