--- a/static/src/components/Games/Games.scss
+++ b/static/src/components/Games/Games.scss
@@ -17,3 +17,15 @@
   background-color: lightblue;
   background-size: cover;
 }
+
+@media(max-width:1000px){
+  .submit_search{
+    margin-top:5px !important;
+  }
+}
+
+@media(max-width:700px){
+  .search_menu{
+    display: none;
+  }
+}
