--- a/static/src/components/Home/Home.css
+++ b/static/src/components/Home/Home.css
@@ -36,13 +36,25 @@ img {
   text-align: center; }
 
 .card {
+  position: relative;
   border: unset;
-  opacity: .9;
-  background-color: black; }
+  background-color: inherit;
+  color: #ffff; }
 
 .background-image {
-  background: url("./../Images/login-screen.jpg") no-repeat;
-  background-size: cover; }
+  position: relative;
+  background: url("./../Images/login-screen.jpg") no-repeat center center/cover;
+  height: 100vh; }
+
+.background-image::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: .9;
+  background-color: black; }
 
 @media (max-width: 1171px) {
   .image_div {
