--- a/static/src/components/Home/Home.scss
+++ b/static/src/components/Home/Home.scss
@@ -59,6 +59,14 @@ img {
   // z-index: 10;
 }
 
+.register{
+  margin: 10px;
+}
+
+.login{
+  margin: 10px;
+}
+
 .background-image::before {
   content: '';
   position: absolute;
