--- a/static/src/components/Games/Games.scss
+++ b/static/src/components/Games/Games.scss
@@ -4,21 +4,37 @@
 }
 
 .search_menu {
-  background-color: red;
+  background-color: #282C35;
   height: 100%;
+  color: #ffff;
 }
 
 .games_display {
-  background-color: yellow;
+  background-color: #989898;
   height: 100%;
 }
 
 .games_shell {
   background-color: lightblue;
   background-size: cover;
+  height: 100vh;
 }
 
-@media(max-width:1000px){
+.search{
+  font-style: italic;
+}
+
+.filter{
+  margin-top: 1rem;
+  margin-bottom: .5rem;
+  font-style: italic;
+}
+
+.searchbar{
+  margin-top: 20px;
+}
+
+@media(max-width:1028px){
   .submit_search{
     margin-top:5px !important;
   }
@@ -27,5 +43,8 @@
 @media(max-width:700px){
   .search_menu{
     display: none;
+  }
+  .find_games{
+    text-align: center;
   }
 }
