--- a/static/src/components/Profile/Profile.css
+++ b/static/src/components/Profile/Profile.css
@@ -22,6 +22,9 @@
 .buttondiv {
   margin-left: 10px; }
 
+.media {
+  margin-left: 30px; }
+
 @media (max-width: 768px) {
   .bio-info {
     display: block; }
