--- a/static/src/components/Users/Users.scss
+++ b/static/src/components/Users/Users.scss
@@ -3,10 +3,43 @@
   font-size: 2rem;
   margin-right: 30px;
 }
+
+.userprofile{
+  width: 180px;
+  height: 180px;
+  border: solid 1px;
+}
+
+.username{
+
+}
+
+.usershell{
+  max-width: 200px;
+  text-align: center;
+  display: inline-block;
+  margin: 10px;
+}
+
+.profileselector {
+  color: black;
+}
+
+.profileselector:hover {
+  color: #009B35;
+}
+
+
+
+
+
+
 .searchbar_right{
   // justify-content: flex-end;
   // Display Right Side
 }
+
+
 
 @media(max-width:576px){
   .searchbar_right{
