--- a/static/src/components/Users/Users.scss
+++ b/static/src/components/Users/Users.scss
@@ -29,7 +29,9 @@
   color: #009B35;
 }
 
-
+.viewrender{
+  min-height: 83vh;
+}
 
 
 
@@ -44,5 +46,11 @@
 @media(max-width:576px){
   .searchbar_right{
 // Drop to new line //
+  }
+}
+
+@media(max-width:400px){
+  .display_users{
+    text-align: center;
   }
 }
