--- a/static/src/components/Games/Games.css
+++ b/static/src/components/Games/Games.css
@@ -1,20 +1,21 @@
 .shell {
   height: 100%;
-  background-color: blue; }
+  background-color: #282C35; }
 
 .search_menu {
   background-color: #282C35;
-  height: 100%;
+  height: 100vh;
   color: #ffff; }
 
 .games_display {
   background-color: #989898;
-  height: 100%; }
+  height: 100%;
+  text-align: center; }
 
 .games_shell {
   background-color: lightblue;
   background-size: cover;
-  height: 100vh; }
+  height: 100%; }
 
 .search {
   font-style: italic; }
@@ -28,13 +29,18 @@
   margin-top: 20px; }
 
 .gameshell {
-  max-width: 200px;
+  width: 200px;
   text-align: center;
   display: inline-block;
-  margin: 10px; }
+  margin: 10px;
+  height: 230px;
+  position: relative;
+  border: solid .3px; }
 
 .gameselector {
-  color: black; }
+  color: black;
+  display: block;
+  height: 200px; }
 
 .gameselector:hover {
   color: #009B35; }
@@ -42,7 +48,18 @@
 .gamecover {
   width: 150px;
   height: 150px;
-  border: solid 1px; }
+  border: solid 1px;
+  margin-top: 2px; }
+
+.addgametag:hover {
+  color: #F6D400; }
+
+.gamename {
+  position: absolute;
+  width: 100%;
+  max-height: 51px;
+  overflow: hidden;
+  padding: 4px; }
 
 @media (max-width: 1028px) {
   .submit_search {
