--- a/static/src/components/Games/Games.scss
+++ b/static/src/components/Games/Games.scss
@@ -1,23 +1,25 @@
 .shell {
   height: 100%;
-  background-color: blue;
+  background-color: #282C35;
 }
 
 .search_menu {
   background-color: #282C35;
-  height: 100%;
+  height: 100vh;
   color: #ffff;
+  // position: sticky; Get this to follow the page
 }
 
 .games_display {
   background-color: #989898;
   height: 100%;
+  text-align: center;
 }
 
 .games_shell {
   background-color: lightblue;
   background-size: cover;
-  height: 100vh;
+  height: 100%;
 }
 
 .search{
@@ -35,14 +37,19 @@
 }
 
 .gameshell{
-  max-width: 200px;
+  width: 200px;
   text-align: center;
   display: inline-block;
   margin: 10px;
+  height: 230px;
+  position: relative;
+  border: solid .3px;
 }
 
 .gameselector{
   color: black;
+  display: block;
+  height: 200px;
 }
 
 .gameselector:hover{
@@ -53,10 +60,19 @@
   width: 150px;
   height: 150px;
   border: solid 1px;
+  margin-top: 2px;
+}
+
+.addgametag:hover {
+  color:#F6D400;
 }
 
 .gamename{
-
+  position: absolute;
+  width: 100%;
+  max-height: 51px;
+  overflow: hidden;
+  padding: 4px;
 }
 
 
@@ -74,3 +90,10 @@
     text-align: center;
   }
 }
+
+// Align Games Centered
+// @media(max-width:484px){
+//   .games_shell{
+//     text-align: center;
+//   }
+// }
