--- a/static/src/components/Home/Home.scss
+++ b/static/src/components/Home/Home.scss
@@ -53,7 +53,7 @@ img {
 .background-image {
   position: relative;
   background: url('./../Images/login-screen.jpg') no-repeat center center/cover;
-  height: 100vh;
+  min-height: 85.6vh;
 }
 
 .register{
