--- a/static/src/components/Layout/Footer.scss
+++ b/static/src/components/Layout/Footer.scss
@@ -1,6 +1,6 @@
 .footer-color {
   background-color: #D3D3D3;
-  position:fixed;
+  // position:absolute;
   left:0px;
   bottom:0px;
   width: 100%;
