--- a/static/src/components/Profile/Profile.scss
+++ b/static/src/components/Profile/Profile.scss
@@ -5,6 +5,10 @@
   margin-top: 50px;
 }
 
+.profileheight{
+  min-height: 85.7vh;
+}
+
 .media-body{
   margin-top: 50px;
   margin-left: 40px;
@@ -30,6 +34,10 @@
   margin-left: 30px;
 }
 
+.games_owned{
+  font-size: 3rem;
+}
+
 @media(max-width:768px){
   .bio-info{
     display: block;
@@ -41,6 +49,10 @@
 
   .media-body{
     margin-left: 0px;
+  }
+  .games_owned{
+    text-align: center;
+    font-size: 2.5rem;
   }
 
 }
