--- a/static/src/components/Log-in/Log-in.css
+++ b/static/src/components/Log-in/Log-in.css
@@ -1,6 +1,9 @@
 .newuser {
   margin: 0 5px; }
 
+.loginshell {
+  min-height: 85.7vh; }
+
 @media (max-width: 786px) {
   .buttonshell {
     text-align: center; }
