--- a/static/src/components/Log-in/Log-in.scss
+++ b/static/src/components/Log-in/Log-in.scss
@@ -2,6 +2,10 @@
   margin: 0 5px;
 }
 
+.loginshell{
+  min-height: 85.7vh;
+}
+
 @media (max-width:786px){
   .buttonshell{
     text-align: center;
