--- a/static/src/components/Games/Games.scss
+++ b/static/src/components/Games/Games.scss
@@ -12,7 +12,7 @@
 
 .games_display {
   background-color: #989898;
-  min-height: 100vh;  
+  min-height: 100vh;
   height: 100%;
   text-align: center;
 }
@@ -42,13 +42,13 @@
   text-align: center;
   display: inline-block;
   margin: 10px;
-  height: 230px;
+  height: 250px;
   position: relative;
   border: solid .3px;
 }
 
 .gameselector{
-  color: black;
+  color: white;
   display: block;
   height: 200px;
 }
@@ -61,7 +61,7 @@
   width: 150px;
   height: 150px;
   border: solid 1px;
-  margin-top: 2px;
+  margin-top: 5px;
 }
 
 .addgametag:hover {
@@ -76,6 +76,14 @@
   padding: 4px;
 }
 
+.collectionbutton {
+  margin-top: 10px;
+}
+
+.collectionbutton:hover{
+  color:yellow;
+  background: green;
+}
 
 @media(max-width:1028px){
   .submit_search{
