--- a/static/src/components/Home/Home.css
+++ b/static/src/components/Home/Home.css
@@ -1,13 +1,23 @@
 img {
   width: 100%; }
 
+.octicon {
+  font-size: 2rem; }
+
+.startcollection {
+  text-align: center; }
+
+.collectionheader {
+  font-size: 2rem; }
+
 .text-center {
   text-align: center;
   align-content: center; }
 
 .center {
   font-size: 2.4rem;
-  text-align: center; }
+  text-align: center;
+  margin-bottom: 40px; }
 
 .image_div {
   width: 50%;
