--- a/static/src/components/Home/Home.scss
+++ b/static/src/components/Home/Home.scss
@@ -2,6 +2,18 @@ img {
   width: 100%;
 }
 
+.octicon{
+  font-size: 2rem;
+}
+
+.startcollection{
+  text-align: center;
+}
+
+.collectionheader{
+  font-size: 2rem;
+}
+
 .text-center {
   text-align: center;
   align-content: center;
@@ -10,6 +22,7 @@ img {
 .center{
   font-size: 2.4rem;
   text-align: center;
+  margin-bottom: 40px;
 }
 
 .image_div {
