--- a/static/src/components/Profile/Profile.css
+++ b/static/src/components/Profile/Profile.css
@@ -5,7 +5,20 @@
   margin-top: 50px; }
 
 .profileheight {
-  min-height: 85.7vh; }
+  min-height: 85.7vh;
+  position: relative;
+  background: url("./../Images/user_background.png") no-repeat center/cover;
+  color: white; }
+
+.profileheight::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: .9;
+  background-color: black; }
 
 .media-body {
   margin-top: 50px;
@@ -31,6 +44,49 @@
 .games_owned {
   font-size: 3rem;
   margin-bottom: 0px; }
+
+.collection {
+  text-align: center; }
+
+.mygameshell {
+  width: 200px;
+  text-align: center;
+  display: inline-block;
+  margin: 10px;
+  height: 250px;
+  position: relative;
+  border: solid .3px; }
+
+.mygameselector {
+  color: white;
+  display: block;
+  height: 200px; }
+
+.mygameselector:hover {
+  color: #009B35; }
+
+.mygamecover {
+  width: 150px;
+  height: 150px;
+  border: solid 1px;
+  margin-top: 5px; }
+
+.myaddgametag:hover {
+  color: #F6D400; }
+
+.mygamename {
+  position: absolute;
+  width: 100%;
+  max-height: 51px;
+  overflow: hidden;
+  padding: 4px; }
+
+.mycollectionbutton {
+  margin-top: 10px;
+  background: white; }
+
+.mycollectionbutton:hover {
+  color: red; }
 
 @media (max-width: 768px) {
   .bio-info {
