--- a/static/src/components/Users/Users.css
+++ b/static/src/components/Users/Users.css
@@ -15,13 +15,26 @@
   margin: 10px; }
 
 .profileselector {
-  color: black; }
+  color: white; }
 
 .profileselector:hover {
   color: #009B35; }
 
 .viewrender {
-  min-height: 83vh; }
+  min-height: 83vh;
+  position: relative;
+  background: url("./../Images/user_background.png") no-repeat center/cover;
+  color: white; }
+
+.viewrender::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: .9;
+  background-color: black; }
 
 @media (max-width: 400px) {
   .display_users {
