--- a/static/src/components/Games/Games.scss
+++ b/static/src/components/Games/Games.scss
@@ -1,24 +1,36 @@
 .shell {
   height: 100%;
-  background-color: #282C35;
 }
 
 .search_menu {
   background-color: #282C35;
-  height: 100vh;
+  min-height: 100vh;
   color: #ffff;
   // position: sticky; Get this to follow the page
 }
 
 .games_display {
-  background-color: #989898;
   min-height: 100vh;
   height: 100%;
   text-align: center;
+  position: relative;
+  background: url('./../Images/user_background.png') repeat;
+  color: white;
 }
 
+.games_display::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: .8;
+  background-color: black;
+}
+
+
 .games_shell {
-  background-color: lightblue;
   background-size: cover;
   height: 100%;
 }
@@ -44,7 +56,6 @@
   margin: 10px;
   height: 250px;
   position: relative;
-  border: solid .3px;
 }
 
 .gameselector{
@@ -53,9 +64,9 @@
   height: 200px;
 }
 
-.gameselector:hover{
-  color: #009B35;
-}
+// .gameselector:hover{
+//   color: #009B35;
+// }
 
 .gamecover{
   width: 150px;
@@ -77,12 +88,18 @@
 }
 
 .collectionbutton {
+  color:white;
+  border-color: white;
   margin-top: 10px;
 }
 
 .collectionbutton:hover{
   color:yellow;
   background: green;
+}
+
+.find_games{
+  position: relative;
 }
 
 @media(max-width:1028px){
