--- a/static/src/components/Users/Users.css
+++ b/static/src/components/Users/Users.css
@@ -21,9 +21,9 @@
   color: #009B35; }
 
 .viewrender {
-  min-height: 83vh;
+  min-height: 85.7vh;
   position: relative;
-  background: url("./../Images/user_background.png") no-repeat center/cover;
+  background: url("./../Images/user_background.png") repeat;
   color: white; }
 
 .viewrender::before {
@@ -33,7 +33,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  opacity: .9;
+  opacity: .8;
   background-color: black; }
 
 @media (max-width: 400px) {
