--- a/static/src/components/Users/Users.scss
+++ b/static/src/components/Users/Users.scss
@@ -14,6 +14,14 @@
 
 }
 
+.profilebutton{
+  position:relative;
+}
+
+.modaltext{
+  color: black;
+}
+
 .usershell{
   max-width: 200px;
   text-align: center;
