profile view change

--- a/static/src/components/Profile/Profile.scss
+++ b/static/src/components/Profile/Profile.scss
@@ -114,9 +114,9 @@
   height: 200px;
 }
 
-.mygameselector:hover{
-  color: #009B35;
-}
+// .mygameselector:hover{
+//   color: #009B35;
+// }
 
 .mygamecover{
   width: 150px;
