--- a/static/src/components/Users/Users.css
+++ b/static/src/components/Users/Users.css
@@ -6,7 +6,8 @@
 .userprofile {
   width: 180px;
   height: 180px;
-  border: solid 1px; }
+  border: solid 1px;
+  margin: 10px; }
 
 .profilebutton {
   position: relative; }
@@ -41,6 +42,48 @@
   right: 0;
   opacity: .8;
   background-color: black; }
+
+.usercontainer {
+  display: inline-block; }
+
+.singleUser {
+  display: inline-block; }
+
+.singleUser:hover {
+  color: green; }
+
+.userimage {
+  margin: 10px;
+  display: inline-block;
+  width: 200px; }
+
+.username {
+  text-align: center; }
+
+.messagebox {
+  position: absolute;
+  top: 20px;
+  height: 200px;
+  text-align: -webkit-auto; }
+
+.message {
+  display: inline-block;
+  width: 400px;
+  height: 180px;
+  position: relative;
+  top: 0px;
+  left: 220px; }
+
+.sendmessage {
+  position: relative;
+  bottom: 10px;
+  left: 240px; }
+
+.usersgames {
+  text-align: center; }
+
+.usersgames > .mygameshell > .mygameselector {
+  color: black; }
 
 @media (max-width: 400px) {
   .display_users {
