--- a/static/src/components/Users/Users.scss
+++ b/static/src/components/Users/Users.scss
@@ -8,11 +8,9 @@
   width: 180px;
   height: 180px;
   border: solid 1px;
+  margin: 10px;
 }
 
-.username{
-
-}
 
 .profilebutton{
   position:relative;
@@ -55,11 +53,60 @@
   background-color: black;
 }
 
+.usercontainer{
+display: inline-block;
+}
 
+.singleUser{
+  display:inline-block;
+}
 
+.singleUser:hover{
+  color:green;
+}
 .searchbar_right{
   // justify-content: flex-end;
   // Display Right Side
+}
+
+.userimage{
+  margin:10px;
+  display: inline-block;
+  width: 200px;
+}
+
+.username{
+  text-align: center;
+}
+
+.messagebox{
+  position: absolute;
+  top: 20px;
+  height: 200px;
+  text-align: -webkit-auto;
+}
+.message{
+  display: inline-block;
+  width: 400px;
+  height: 180px;
+  position: relative;
+  top: 0px;
+  left:220px;
+
+}
+
+.sendmessage{
+  position: relative;
+  bottom: 10px;
+  left: 240px;
+}
+
+.usersgames{
+  text-align: center;
+}
+
+.usersgames>.mygameshell>.mygameselector{
+color: black;
 }
 
 
