--- a/static/src/components/Users/Users.scss
+++ b/static/src/components/Users/Users.scss
@@ -8,7 +8,7 @@
   min-width: 180px;
   min-height: 180px;
   max-width: 180px;
-  min-height: 180px;
+  max-height: 180px;
   border: solid 1px;
   margin: 10px;
 }
